# tpe_sia_2025_tp5

./: .gitignore  README.md  main.py  pyproject.toml
assets/: dataset.py
configs/: ej1_base.json
ej1/: ej1a.py  ej1a4.py  ej1b1.py  ej1b2.py
ej1/src/: activators.py  autoencoders.py  dataset.py  optimizers.py  plots.py  utils.py
ej2/: ej2c.py
ej2/src/: autoencoders.py  dataset.py  plots.py
shared/: activators.py  emoji_dataset.py  metrics.py  optimizers.py  utils.py
src/: 2c.py  activators.py  autoencoders.py  generate_from_latent.py  metrics.py  optimizers.py  plots.py  pruebas_1b1.py  pruebas_1b2.py  utils.py  variationalAutoEncoder.py
